--- a/style.css
+++ b/style.css
@@ -50,48 +50,52 @@ a {
     border-image: initial;
     background: rgb(68, 68, 68);
 }
-
-
+.section {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  }
 
 li {
     list-style-type: none;
 }
 
-
-
 body {
     margin: 0;
     padding: 0;
   }
-  .container {
-    width: 100vw; /* Полный экран по ширине */
-    height: 100vh; /* Полный экран по высоте */
-    display: flex;
-    flex-direction: column;
-    transition: transform 0.5s ease-in-out;
-    overflow: auto;
+.container {
+  width: 100vw; /* Полный экран по ширине */
+  height: 100vh; /* Полный экран по высоте */
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.5s ease-in-out;
+  overflow: auto;
   }
   
-  .container section {
-    width: 100vw; /* Полный экран по ширине */
-    height: 100vh; /* Полный экран по высоте */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    opacity: 0; /* Начальная прозрачность секции */
-    transition: opacity 0.5s ease-in-out;
-    flex-shrink: 0;
+.container section {
+  width: 100vw; /* Полный экран по ширине */
+  height: 100vh; /* Полный экран по высоте */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /*opacity: 0; /* Начальная прозрачность секции */
+  transition: opacity 0.5s ease-in-out;
+  flex-shrink: 0;
   }
   
-  .container section.active {
-    opacity: 1; /* Показываем активную секцию */
+.container section.active {
+  opacity: 1; /* Показываем активную секцию */
+  scroll-behavior: smooth;
   }
   
   
   
   #section1 {
-    background-color: #ffcccc;
+  background-color: #ffcccc;
   }
   
   #section2 {
